yamls/ingress/hipster-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: hipster-nginx
  annotations:
   kubernetes.io/ingress.class: nginx
  name: hipster
spec:
  rules:
  - host: hipster-nginx.devops.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
